deploy/k8s/src/monster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ebullientworks
  name: ingress-resource-backend
  annotations: {}
spec:
  rules:
  - host: spring.${cluster.ip}.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mc-spring-micrometer
            port:
              number: 8080
  - host: quarkus.${cluster.ip}.nip.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: mc-quarkus-micrometer
              port:
                number: 8080
  - host: mpmetrics.${cluster.ip}.nip.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: mc-quarkus-mpmetrics
              port:
                number: 8080
